[package]
name = "java-bin-name"
version = "0.2.1"
edition = "2024"
description = "Java binary name parser and writer"
repository = "https://codeberg.org/DM-Earth/java-bin-name"
license = "LGPL-3.0-or-later"
keywords = ["java", "binary", "jvm", "no_std"]
categories = ["parsing"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
smallvec = { version = "1.15", features = ["union"] }

[workspace.lints.rust]
missing-docs = "warn"
missing-debug-implementations = "warn"
let-underscore-drop = "warn"
single-use-lifetimes = "warn"
trivial-numeric-casts = "warn"
elided-lifetimes-in-paths = "deny"
unused-lifetimes = "forbid"
unused-macro-rules = "warn"
unused-qualifications = "warn"
variant-size-differences = "warn"
dyn-drop = "forbid"
ellipsis-inclusive-range-patterns = "forbid"
exported-private-dependencies = "forbid"
uncommon-codepoints = "deny"
unexpected_cfgs = { level = "warn", check-cfg = [] }

[workspace.lints.clippy]
missing-panics-doc = "warn"
missing-errors-doc = "warn"
cloned-instead-of-copied = "warn"
future-not-send = "warn"
if-not-else = "warn"
if-then-some-else-none = "warn"
impl-trait-in-params = "warn"
macro-use-imports = "deny"
str-to-string = "warn"
iter-without-into-iter = "warn"
decimal-literal-representation = "warn"
ref-as-ptr = "warn"
unused-trait-names = "warn"
unnecessary-semicolon = "warn"
unnecessary-debug-formatting = "warn"
too-long-first-doc-paragraph = "warn"
ref-option = "warn"
redundant-test-prefix = "warn"
map-with-unused-argument-over-ranges = "warn"
manual-midpoint = "warn"
manual-is-power-of-two = "warn"
ip-constant = "warn"
elidable-lifetime-names = "warn"
coerce-container-to-any = "warn"
todo = "warn"
inline-always = "warn"
multiple-crate-versions = "warn"
use-self = "warn"
useless-let-if-seq = "warn"
suboptimal-flops = "warn"
redundant-clone = "warn"

[lints]
workspace = true
